# distconv

./: .clang-format  .gitignore  .gitmodules  ACTIONPLAN.md  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  SUGGESTIONS.md  TASKS.md  assign_job_optimization_task.md  benchmark.db  benchmark_dispatch_server_state.json  benchmark_engines_100.db  benchmark_jobs_100.db  dispatch_server_state.json  distconv-dispatch-server.service  install.sh  output.txt  quickstart.sh  repro_issue  repro_issue.cpp  transcoding_jobs.db
.github/workflows/: ci.yml  docker.yml  release.yml
common/examples/: modern_getopt_example  modern_getopt_example.cpp
common/include/: modern_getopt.hpp
config/: server.conf.example
deployment/: README.md  distconv-transcoding-engine.service  install.sh  uninstall.sh
deployment/docker/: Dockerfile.dispatch-server  Dockerfile.submission-client  Dockerfile.transcoding-engine  docker-compose.yml
deployment/etc/distconv/: api-keys.conf  directories.conf  dispatch-server.conf  ports.conf  transcoding-engine.conf
deployment/k8s/: distconv-deployment.yaml
dispatch_server/: main.py  requirements.txt
dispatch_server_cpp/: .clang-format  CMakeLists.txt  README.md  SUBACTIONPLAN.md  SUGGESTIONS  SUGGESTIONS.md  TESTING_TODO.md  api_middleware.cpp  api_middleware.h  app_main.cpp  app_main_modern.cpp  assignment_handler.cpp  assignment_handler.h  build_log_clean.txt  build_log_fast.txt  dispatch_server_constants.h  dispatch_server_core.cpp  dispatch_server_core.h  engine_handlers.cpp  engine_handlers.h  enhanced_endpoints.cpp  enhanced_endpoints.h  httplib.h  job_action_handlers.cpp  job_action_handlers.h  job_handlers.cpp  job_handlers.h  job_publisher.cpp  job_publisher.h  job_scheduler.cpp  job_scheduler.h  job_update_handler.cpp  job_update_handler.h  main.cpp  memory_message_queue.h  message_queue.h  perf_benchmark.cpp  redis_message_queue.cpp  redis_message_queue.h  repositories.cpp  (+14 more)
dispatch_server_cpp/tests/: api_endpoint_tests.cpp  api_test_definitions.cpp  api_tests.cpp  assignment_benchmark.cpp  benchmark_save_state.cpp  benchmark_sqlite.cpp  bulk_update_tests.cpp  command_line_tests.cpp  engine_handlers_tests.cpp  engines_api_tests.cpp  error_handling_tests.cpp  final_edge_case_tests.cpp  job_assignment_benchmark.cpp  job_handlers_tests.cpp  job_management_tests.cpp  job_resubmission_tests.cpp  job_state_transition_tests.cpp  jobs_assign_api_tests.cpp  jobs_get_api_tests.cpp  jobs_post_api_tests.cpp  jobs_status_update_tests.cpp  json_parsing_edge_case_tests.cpp  lock_contention_benchmark.cpp  main.cpp  max_retries_validation_tests.cpp  message_queue_integration_tests.cpp  message_queue_tests.cpp  mock_message_queue.h  modern_api_tests.cpp  modern_assignment_tests.cpp  modern_assignment_verification.cpp  pending_expiration_benchmark.cpp  performance_benchmark.cpp  persistent_storage_tests.cpp  repository_benchmark.cpp  repro_benchmark.cpp  requeue_benchmark.cpp  requeue_benchmark_optimized.cpp  save_benchmark.cpp  scheduling_logic_tests.cpp  (+10 more)
docs/: architecture_and_components.md  endpoint_protocol.md  modern_getopt.md  protocol.md  submissions_protocol.md  user_guide.md
submission_client/: main.py
submission_client_desktop/: CMakeLists.txt  DESIGN.md  README.md  REQUIREMENTS.md  SUBACTIONPLAN.md  TESTING_TODO.md  app_main.cpp  main.cpp  submission_client_core.cpp  submission_client_core.h
submission_client_desktop/tests/: main.cpp  mock_cpr.h
systemd/: distconv-dispatch.service
transcoding_engine/: CMakeLists.txt  CMakeLists_modern.txt  Dockerfile  README.md  README_modern.md  SUBACTIONPLAN.md  TESTING_TODO.md  app_main.cpp  app_main_modern.cpp  backoff_timer.h  main.cpp  test_results.xml  transcoding_engine_core.cpp  transcoding_engine_core.h
transcoding_engine/build_modern/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  transcoding_engine_modern_tests[1]_include.cmake  transcoding_engine_modern_tests[1]_tests.cmake
transcoding_engine/build_modern/src/utils/: build_info.h
transcoding_engine/deployment/: docker-compose.yml  docker-config.json  install.sh  uninstall.sh
transcoding_engine/src/core/: transcoding_engine.cpp  transcoding_engine.h
transcoding_engine/src/implementations/: cpr_http_client.cpp  cpr_http_client.h  redis_message_queue.cpp  redis_message_queue.h  secure_subprocess.cpp  secure_subprocess.h  sqlite_database.cpp  sqlite_database.h
transcoding_engine/src/interfaces/: database_interface.h  http_client_interface.h  message_queue.h  subprocess_interface.h
transcoding_engine/src/mocks/: mock_database.cpp  mock_database.h  mock_http_client.cpp  mock_http_client.h  mock_subprocess.cpp  mock_subprocess.h
transcoding_engine/src/utils/: build_info.h.in
transcoding_engine/tests/: CMakeLists.txt  backoff_timer_test.cpp  benchmark_json.cpp  benchmark_polling_legacy.cpp  initialization_tests.cpp  main.cpp  main_loop_tests.cpp  secure_subprocess_benchmark.cpp  sqlite_queue_tests.cpp  test_common.h  test_helpers.cpp  transcoding_process_tests.cpp
transcoding_engine/tests/mocks/: mock_libs.cpp
transcoding_engine/tests/mocks/include/cjson/: cJSON.h
transcoding_engine/tests/mocks/include/curl/: curl.h
transcoding_engine/tests_modern/: performance_reproduction_test.cpp  test_implementations.cpp  test_main.cpp  test_refactoring.cpp  test_ssl_config.cpp  test_transcoding_engine.cpp
